<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_all"
        android:icon="@drawable/ic_book"
        android:title="@string/all"/>
    <item
        android:id="@+id/navigation_authors"
        android:icon="@drawable/ic_authors"
        android:title="@string/title_authors"/>
    <item
        android:id="@+id/navigation_bookshelves"
        android:icon="@drawable/ic_bookshelf"
        android:title="@string/title_bookshelves"/>
</menu>
